feat: implement full-stack management features for category and component modules including DTOs, mappers, services, and base UI components.